fix: user style left align

--- a/fly/applications/qsochat/ChatServer/public/stylesheets/style.css
+++ b/fly/applications/qsochat/ChatServer/public/stylesheets/style.css
@@ -83,7 +83,7 @@ a {
 }
 
 #users {
-	float: right;
+	float: left;
 }
 
 button.callsign {
